@@ -50,3 +50,23 @@ debian              stable-slim         d30525fb4ed2        10 days ago         
 jshell> Runtime.getRuntime().maxMemory() / (1 << 20)
 $1 ==> 100
 ```
+
+
+Create a new text file [jdk-9-alpine.Dockerfile](jdk-9-alpine.Dockerfile)
+
+```
+# A JDK 9 with Alpine Linux
+FROM alpine:3.6
+# Add the musl-based JDK 9 distribution
+RUN mkdir /opt
+# Download from http://jdk.java.net/9/
+# ADD http://download.java.net/java/jdk9-alpine/archive/181/binaries/jdk-9-ea+181_linux-x64-musl_bin.tar.gz
+ADD jdk-9-ea+181_linux-x64-musl_bin.tar.gz /opt
+# Set up env variables
+ENV JAVA_HOME=/opt/jdk-9
+ENV PATH=$PATH:$JAVA_HOME/bin
+CMD ["jshell", "-J-XX:+UnlockExperimentalVMOptions", \
+               "-J-XX:+UseCGroupMemoryLimitForHeap", \
+               "-R-XX:+UnlockExperimentalVMOptions", \
+               "-R-XX:+UseCGroupMemoryLimitForHeap"]
+```
